--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>invoice-frontend</title>
+    <meta http-equiv='Content-type' content='text/html; charset=utf-8'>
+    <title>Invoice Generator</title>
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
-<body>
-<div id="app"></div>
-<script src="js/bundle.js"></script>
+<body id="react-main">
+    Loading...
+    <script src="js/bundle.js"></script>
 </body>
 </html>
